--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   </div>
   <div class="header">
     <div class="container">
-      <img class="avatar" src="./public/asset/people.png" alt="Avatar" class="avatar">
+      <img class="avatar" src="./assets/people.png" alt="Avatar" class="avatar">
       <div class="title_content">
         <p>HI</p>
         <p>I’m a front-end developer</p>
         <h1 class="title_name">William</h1>
-        <div class="h_btn_content"><button class="btn"><a href="#">CONTACT ME<img src="./public/asset/arrow_outward.png" alt="arrow"></a></button></div>
+        <div class="h_btn_content"><button class="btn"><a href="#">CONTACT ME<img src="./assets/arrow_outward.png" alt="arrow"></a></button></div>
       </div>
     </div>
   </div>
@@ -36,15 +36,15 @@
         <p class="description">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an
         optimal user experience.</p>
         <div class="i_img_content">
-          <img src="./public/asset/sparkle-sm.png" alt="Sparkle">
-          <img src="./public/asset/sparkle-sm.png" alt="Sparkle">
-          <img src="./public/asset/sparkle-sm.png" alt="Sparkle">
+          <img src="./assets/sparkle-sm.png" alt="Sparkle">
+          <img src="./assets/sparkle-sm.png" alt="Sparkle">
+          <img src="./assets/sparkle-sm.png" alt="Sparkle">
         </div>
       </div>
       <div class="section_right">
-        <img src="./public/asset/sparkle.png" alt="Sparkle">
-        <img src="./public/asset/photographer.png" alt="Photographer">
-        <img src="./public/asset/people-2.png" alt="People">
+        <img src="./assets/sparkle.png" alt="Sparkle">
+        <img src="./assets/photographer.png" alt="Photographer">
+        <img src="./assets/people-2.png" alt="People">
       </div>
     </div>
   </div>
@@ -83,33 +83,33 @@
       <div class="banner_title">
         <h2 class="section_title">CONTACT</h2>
         <h2 class="section_title">ME</h2>
-        <img class="b_title_img" src="./public/asset/trending_flat_black_24dp 1.png" alt="Trending">
+        <img class="b_title_img" src="./assets/trending_flat_black_24dp 1.png" alt="Trending">
       </div>
       <ul class="banner_links">
-        <li class="banner_item"><a href="#"><img src="./public/asset/discord.png" alt="Discord"></a></li>
-        <li class="banner_item"><a href="#"><img src="./public/asset/instagram.png" alt="Instagram"></a></li>
-        <li class="banner_item"><a href="#"><img src="./public/asset/message.png" alt="Message"></a></li>
+        <li class="banner_item"><a href="#"><img src="./assets/discord.png" alt="Discord"></a></li>
+        <li class="banner_item"><a href="#"><img src="./assets/instagram.png" alt="Instagram"></a></li>
+        <li class="banner_item"><a href="#"><img src="./assets/message.png" alt="Message"></a></li>
       </ul>
     </div>
   </div>
   <div class="project container ">
     <h2 class="section_title">My PROJECT</h2>
     <div class="project_container">
-      <img class="p_left_img" src="./public/asset/Rectangle 10.png" alt="Project">
+      <img class="p_left_img" src="./assets/Rectangle 10.png" alt="Project">
       <div class="p_right_content">
         <div class="p_card">
-          <img src="./public/asset/Rectangle 15.png" alt="Project" class="p_card_img">
+          <img src="./assets/Rectangle 15.png" alt="Project" class="p_card_img">
           <div class="p_card_body">
             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing pages. I take pride in creating
             clean, efficient, and user-friendly code.</p>
             <button class="p_card_btn btn">
-              <a class="" href="#">SEE MORE<img src="./public/asset/arrow_outward-white.png" alt="arrow"></a>
+              <a class="" href="#">SEE MORE<img src="./assets/arrow_outward-white.png" alt="arrow"></a>
             </button>
           </div>
         </div>
         <div class="p_img_content">
-          <img src="./public/asset/Rectangle 14.png" alt="Project" class="p_img">
-          <img src="./public/asset/Rectangle 29.png" alt="Project" class="p_img">
+          <img src="./assets/Rectangle 14.png" alt="Project" class="p_img">
+          <img src="./assets/Rectangle 29.png" alt="Project" class="p_img">
         </div>
       </div>
     </div>
