修改圖片路徑

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   </div>
   <div class="header">
     <div class="container">
-      <img class="avatar" src="./assets/people.png" alt="Avatar" class="avatar">
+      <img class="avatar" src="/assets/people.png" alt="Avatar" class="avatar">
       <div class="title_content">
         <p>HI</p>
         <p>I’m a front-end developer</p>
         <h1 class="title_name">William</h1>
-        <div class="h_btn_content"><button class="btn"><a href="#">CONTACT ME<img src="./assets/arrow_outward.png" alt="arrow"></a></button></div>
+        <div class="h_btn_content"><button class="btn"><a href="#">CONTACT ME<img src="/assets/arrow_outward.png" alt="arrow"></a></button></div>
       </div>
     </div>
   </div>
@@ -36,9 +36,9 @@
         <p class="description">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an
         optimal user experience.</p>
         <div class="i_img_content">
-          <img src="./assets/sparkle-sm.png" alt="Sparkle">
-          <img src="./assets/sparkle-sm.png" alt="Sparkle">
-          <img src="./assets/sparkle-sm.png" alt="Sparkle">
+          <img src="/assets/sparkle-sm.png" alt="Sparkle">
+          <img src="/assets/sparkle-sm.png" alt="Sparkle">
+          <img src="/assets/sparkle-sm.png" alt="Sparkle">
         </div>
       </div>
       <div class="section_right">
