1.調整字體為Bruno Ace SC  2.微調navbar css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Page</title>
+  <style>@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');</style>
   <style>@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap');</style>
 </head>
 <body>
@@ -22,10 +23,10 @@
     <div class="container">
       <img class="avatar" src="/assets/people.png" alt="Avatar" class="avatar">
       <div class="title_content">
-        <p>HI</p>
+        <p>Hi</p>
         <p>I’m a front-end developer</p>
         <h1 class="title_name">William</h1>
-        <div class="h_btn_content"><button class="btn"><a href="#">CONTACT ME<img src="/assets/arrow_outward.png" alt="arrow"></a></button></div>
+        <div class="h_btn_content"><button class="btn"><a href="#">contact me<img src="/assets/arrow_outward.png" alt="arrow"></a></button></div>
       </div>
     </div>
   </div>
@@ -103,7 +104,7 @@
             <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing pages. I take pride in creating
             clean, efficient, and user-friendly code.</p>
             <button class="p_card_btn btn">
-              <a class="" href="#">SEE MORE<img src="./assets/arrow_outward-white.png" alt="arrow"></a>
+              <a class="" href="#">see more<img src="./assets/arrow_outward-white.png" alt="arrow"></a>
             </button>
           </div>
         </div>
